# server.js
@@ -35,12 +35,14 @@ app.use("/api/V1", uploadRoutes);
 app.use('/api/V1/items', itemRoutes);
 app.use('/api/V1/permissions', permissionRoutes);
 app.use('/api/V1/roles', roleRoutes);
+app.use('/api/V1/admin/delivery-agent', require('./routes/admin/deliveryAgentRoutes'));
+app.use('/api/V1/agent/delivery-agent', require('./routes/agent/deliveryAgentRoutes'));
 app.use('/api/V1/users', userRoutes);
-app.use('/api/V1/profile', profileRoutes);
-app.use('/api/V1/orders', orderRoutes)
+app.use('/api/V1/profile',profileRoutes);
+app.use('/api/V1/orders',orderRoutes)
 app.use("/api/V1/products", productRoutes);
-app.use("/api/V1/common", commonRoutes)
-app.use('/api/V1/collections', collectionRoutes)
+app.use("/api/V1/common",commonRoutes)
+app.use('/api/V1/collections',collectionRoutes)
 
 // swagger documentation 
 swaggerDocs(app);
@@ -48,7 +50,7 @@ swaggerDocs(app);
 app.use(errorHandler);
 
 
-app.listen(process.env.PORT, () => {
+app.listen(process.env.PORT, () =>{
     console.log(clc.blueBright("────────────────────────────────────────────"));
     console.log(`${clc.green("🚀 Server Started Successfully")}`);
     console.log(`${clc.cyan("🌐 Environment")} : ${clc.whiteBright(process.env.NODE_ENV)}`);
